--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,16 +3,25 @@ import(aqp)
 import(ape)
 
 importFrom(igraph,
+  graph.edgelist,
+  count.multiple,
+  get.adjacency,
   graph.adjacency,
+  get.edgelist,
+  get.edges,
+  add.edges,
+  simplify,
+  E,
+  'E<-',
   V,
   'V<-',
   degree,
+  minimum.spanning.tree,
+  delete.edges,
   fastgreedy.community,
   membership,
   layout.fruchterman.reingold,
-  crossing,
   dendPlot,
-  plot.communities,
   plot.igraph
 )
 
@@ -36,8 +45,15 @@ importFrom(vegan,
   vegdist
 )
 
+importFrom(soilDB,
+  format_SQL_in_statement,
+  SDA_query
+)
+
 importFrom(sp,
-  spsample
+  spsample,
+  coordinates,
+  spTransform
 )
 
 importFrom(reshape2,
@@ -56,7 +72,8 @@ importFrom(Hmisc,
 )
 	
 importFrom(scales, 
-  alpha
+  alpha,
+  rescale
 )
 
 importFrom(circular, 
